# csfd-search

./: .gitignore  README.md  db.sqlite3  pyproject.toml
apps/movies/: models.py  urls.py  utils.py  views.py
apps/movies/management/commands/: download.py
apps/movies/migrations/: 0001_initial.py  0002_alter_actor_name_unaccented_and_more.py  0002_unaccent_filter.py
apps/movies/templates/: actor_detail.html  base.html  movie_detail.html  search_base.html  search_results.html  search_results_tgs.html
components/actors_list/: actors_list.html  actors_list.py
components/card/: card.html  card.py
components/movies_list/: movies_list.html  movies_list.py
components/search_form/: search_form.html  search_form.py
config/: asgi.py  settings.py  urls.py  wsgi.py
