[tool.poetry]
name = "mediaboard"
version = "0.1.0"
description = ""
authors = ["Petr Sebik <sebikpetr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1"
django-components = "0.101"
beautifulsoup4 = "4.12.3"
requests = "2.32.3"
aiohttp = "3.10.8"
psycopg2 = "2.9.9"
python-dotenv = "1.0.1"
django-select2 = "8.2.1"
django-crispy-forms = "2.1"
crispy-bootstrap5 = "2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
